# Copyright (c) 2022-2023 VMware, Inc. All rights reserved.
# # VMware Confidential

""" Driver definition for nvme_pcie driver.
"""

load(
    "//bora/bazel/esx:device_driver.bzl",
    "device_driver",
)

device_driver(
    name = "nvme_pcie",
    srcs = [
        "nvme_pcie.c",
        "nvme_pcie_adapter.c",
        "nvme_pcie_debug.c",
        "nvme_pcie_driver.c",
        "nvme_pcie_mgmt.c",
        "nvme_pcie_module.c",
        "nvme_pcie_os.c",
    ],
    binary_compat = "yes",
    license = "BSD",
    vendor = "VMware",
    version = "1.2.4.9",
    version_bump = "1",
)
